[gd_scene load_steps=2 format=3 uid="uid://c8yay203a4b5c"]

[ext_resource type="Script" path="res://Scripts/Ui/UpgradeMenu.gd" id="1_upgrade"]

[node name="UpgradeMenu" type="CanvasLayer"]
script = ExtResource("1_upgrade")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Background" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.8)

[node name="Container" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Control/Container"]
layout_mode = 2
text = "CHOOSE UPGRADE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="Control/Container"]
layout_mode = 2
text = "Select one to continue"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeCards" type="HBoxContainer" parent="Control/Container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="UpgradeCard1" type="Panel" parent="Control/Container/UpgradeCards"]
custom_minimum_size = Vector2(140, 180)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Control/Container/UpgradeCards/UpgradeCard1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Icon" type="ColorRect" parent="Control/Container/UpgradeCards/UpgradeCard1/VBox"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
color = Color(1, 0, 0, 1)

[node name="Name" type="Label" parent="Control/Container/UpgradeCards/UpgradeCard1/VBox"]
layout_mode = 2
text = "Upgrade Name"
horizontal_alignment = 1

[node name="Description" type="Label" parent="Control/Container/UpgradeCards/UpgradeCard1/VBox"]
layout_mode = 2
text = "Description here"
horizontal_alignment = 1
autowrap_mode = 3

[node name="SelectButton" type="Button" parent="Control/Container/UpgradeCards/UpgradeCard1/VBox"]
layout_mode = 2
size_flags_vertical = 8
text = "SELECT"

[node name="UpgradeCard2" type="Panel" parent="Control/Container/UpgradeCards"]
custom_minimum_size = Vector2(140, 180)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Control/Container/UpgradeCards/UpgradeCard2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Icon" type="ColorRect" parent="Control/Container/UpgradeCards/UpgradeCard2/VBox"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
color = Color(0, 1, 0, 1)

[node name="Name" type="Label" parent="Control/Container/UpgradeCards/UpgradeCard2/VBox"]
layout_mode = 2
text = "Upgrade Name"
horizontal_alignment = 1

[node name="Description" type="Label" parent="Control/Container/UpgradeCards/UpgradeCard2/VBox"]
layout_mode = 2
text = "Description here"
horizontal_alignment = 1
autowrap_mode = 3

[node name="SelectButton" type="Button" parent="Control/Container/UpgradeCards/UpgradeCard2/VBox"]
layout_mode = 2
size_flags_vertical = 8
text = "SELECT"

[node name="UpgradeCard3" type="Panel" parent="Control/Container/UpgradeCards"]
custom_minimum_size = Vector2(140, 180)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Control/Container/UpgradeCards/UpgradeCard3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Icon" type="ColorRect" parent="Control/Container/UpgradeCards/UpgradeCard3/VBox"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
color = Color(0, 0, 1, 1)

[node name="Name" type="Label" parent="Control/Container/UpgradeCards/UpgradeCard3/VBox"]
layout_mode = 2
text = "Upgrade Name"
horizontal_alignment = 1

[node name="Description" type="Label" parent="Control/Container/UpgradeCards/UpgradeCard3/VBox"]
layout_mode = 2
text = "Description here"
horizontal_alignment = 1
autowrap_mode = 3

[node name="SelectButton" type="Button" parent="Control/Container/UpgradeCards/UpgradeCard3/VBox"]
layout_mode = 2
size_flags_vertical = 8
text = "SELECT"

[node name="WeaponShopButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -130.0
offset_right = 80.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
text = "Buy Katana (1 Crystal)"

[node name="StaffShopButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -90.0
offset_right = 80.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
text = "Buy Lightning Staff (1 Crystal)"

[node name="SkipButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -50.0
offset_right = 40.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Skip"
